fix pay card on small screens

--- a/order-system-ionic/src/components/Divider/Divider.module.scss
+++ b/order-system-ionic/src/components/Divider/Divider.module.scss
@@ -2,6 +2,6 @@
     width: 100%;
     height: 1px;
     background-color: #ccc;
-    margin: 10px 0;
+    margin: 5px 0;
   }
   
