--- a/order-system-ionic/src/pages/Payment/Pay.module.scss
+++ b/order-system-ionic/src/pages/Payment/Pay.module.scss
@@ -3,12 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 20px;
-  margin-top: 25px;;
+  padding: 0px 10px;
+  margin-top: 30px;;
 }
 
 .buttonsInnerContainer {
   width: 100%;
+  max-width: 80vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
